[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/EnemyScene/EnemyBaseScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/EnemyScene/Virus1.gd" type="Script" id=2]
[ext_resource path="res://assets/animatedvirus/virus1.tres" type="SpriteFrames" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.8663

[node name="Virus1" instance=ExtResource( 1 )]
script = ExtResource( 2 )
Identity = "Virus1"
DAMAGE = 30
ATTACK_GAP = 0.3

[node name="Sprite" parent="Detector" index="0"]
position = Vector2( -4.13721, -12.5255 )
scale = Vector2( 5.90173, 5.84273 )
frames = ExtResource( 3 )
frame = 2

[node name="Attack" type="Area2D" parent="." index="2"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack" index="0"]
shape = SubResource( 1 )

[node name="AttackInterval" type="Timer" parent="." index="3"]
wait_time = 1.25
autostart = true
[connection signal="draw" from="." to="." method="_on_Neutrophils_draw"]
[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="timeout" from="AttackInterval" to="." method="_on_AttackInterval_timeout"]
